# Life-Insurance-Support-Assistant

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  agent.py  api_client.py  cli_interface.py  main.py  models.py  tools.py
config/: logging_config.py  settings.py
docs/: API_REFERENCE.md  USER_GUIDE.md
knowledge/: insurance_data.json  policy_templates.md
scripts/: run_cli.py  run_server.sh  setup.sh
tests/: conftest.py  test_agent.py  test_tools.py
